--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <input type="text" id="name" name="name" required="" minlength="4" maxlength="150" size="80">
     <br>
     <img class="fit-picture" src="forest_fire.jpg" alt="Wildfire Prevention">
-    <button>
+    <button name="button">Click Here</button>
     <main>
     </main>
     <script src="sketch.js"></script>
